Fixed Alchemia spacing

--- a/css/style.css
+++ b/css/style.css
@@ -709,7 +709,7 @@ Rounded Images
     background: #0c0c0c;
     position: relative;
     width: 100%;
-    padding: 25px 0 15px 0;
+    padding: 200px 0 15px 0;
 }
 
 .alchemia .logo img {
